Adição de compra/venda de cartas no mercado global